name:          terminal-progress-bar
version:       0.0.1
cabal-version: >=1.8
build-type:    Simple
stability:     provisional
author:        Roel van Dijk <vandijk.roel@gmail.com>
maintainer:    Roel van Dijk <vandijk.roel@gmail.com>
copyright:     2012 Roel van Dijk <vandijk.roel@gmail.com>
license:       BSD3
license-file:  LICENSE
category:
homepage:      https://github.com/roelvandijk/terminal-progress-bar
bug-reports:   https://github.com/roelvandijk/terminal-progress-bar/issues
synopsis:      A simple progress bar in the terminal
description:

  A progress bar is used to convey the progress of a task. This
  package implements a very simple textual progress bar.

extra-source-files: LICENSE, README.markdown

source-repository head
  type:     git
  location: git://github.com/roelvandijk/terminal-progress-bar.git

library
    hs-source-dirs: src
    build-depends: base                 >= 3.0.3.1 && < 4.6
                 , base-unicode-symbols >= 0.2.2.3 && < 0.3
    exposed-modules: System.ProgressBar
    ghc-options: -Wall

test-suite test-terminal-progress-bar
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: src, test
  ghc-options: -Wall
  build-depends: base                  >= 3.0.3.1 && < 4.6
               , base-unicode-symbols  >= 0.2.2.3 && < 0.3
               , HUnit                 >= 1.2.4.2 && < 1.3
               , terminal-progress-bar == 0.0.1
               , test-framework        >= 0.3.3   && < 0.5
               , test-framework-hunit  >= 0.2.6   && < 0.3

