name:          terminal-progress-bar-example
version:       0.1
cabal-version: >=1.10
build-type:    Simple
stability:     provisional
author:        Roel van Dijk <vandijk.roel@gmail.com>
maintainer:    Roel van Dijk <vandijk.roel@gmail.com>
copyright:     2012–2019 Roel van Dijk <vandijk.roel@gmail.com>
license:       BSD3
license-file:  LICENSE
category:      System, User Interfaces
homepage:      https://github.com/roelvandijk/terminal-progress-bar
bug-reports:   https://github.com/roelvandijk/terminal-progress-bar/issues
synopsis:      An example usage of the terminal-progress-bar library
description:
  An example usage of the terminal-progress-bar library.

extra-source-files: LICENSE, README.markdown

source-repository head
  type:     git
  location: git://github.com/roelvandijk/terminal-progress-bar.git

executable terminal-progress-bar-example
    main-is: example.hs
    hs-source-dirs: .
    ghc-options: -Wall
    build-depends:
        ansi-terminal >= 0.6.3
      , async         >= 2.1.1
      , base          >= 4.5 && < 5
      , random        >= 1.1
      , terminal-progress-bar
      , text          >= 1.2
    default-language: Haskell2010
